Fix menu overlap, add event section
* Add event section

* Add event content

* image spacing

* Fix menu overlap

--- a/css/main.css
+++ b/css/main.css
@@ -20,16 +20,18 @@ html {
     list-style-type: none;
     color: white;
     display: flex;
+    flex-wrap: wrap;
 }
-
 #themes-list li {
-    margin: 0 auto;
-    font-size: 20px;
+    float: left;
+    padding: 0 20px;
+/*    margin: 0 auto 0 0;*/
+    font-size: 25px;
 }
 
 .event-cards {
     display: none;
-    margin: 0 20px;
+    margin: 10px 30px;
 }
 
 .active-cards {
@@ -37,7 +39,7 @@ html {
 }
 
 .card-container {
-    perspective: 600;
+    perspective: 600px;
     position: relative;
     height: 25vw;
     min-height: 200px;
@@ -92,7 +94,7 @@ html {
     background: none;
 }
 
-.card:hover {
+.card-container:hover .card {
     transform: rotateY(180deg);
 }
 
@@ -104,7 +106,9 @@ html {
     overflow: hidden;
     width: 100%;
 }
-
+#events .container {
+    padding-left: 0;
+}
 .card .back {
     background: #eaeaed;
     color: #0087cc;
@@ -312,14 +316,16 @@ svg {
 .ml1 .line2 {
     bottom: 0;
 }
-
-.menu {
+.Wmenu {
     position: fixed;
+    z-index: 1000;
+}
+.menu {
+    position: absolute;
     top: 20px;
     left: 20px;
     height: 46px;
     width: 46px;
-    z-index: 1003;
 }
 
 .menu-circle {
@@ -329,7 +335,6 @@ svg {
     position: absolute;
     border-radius: 50%;
     transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-    z-index: 1000;
 }
 
 .menu:hover .menu-circle {
@@ -344,7 +349,7 @@ svg {
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 1002;
+    z-index: 1000;
 }
 
 .menu-icon {
@@ -407,7 +412,7 @@ svg {
     justify-content: center;
     align-items: center;
     transition: opacity 0.2s ease-in-out;
-    z-index: 1001;
+/*    z-index: 1000;*/
 }
 
 .menu-overlay.open {
@@ -415,7 +420,6 @@ svg {
     visibility: visible;
     transition-delay: 0.03s;
 }
-
 .menu-overlay a {
     font-size: 2.5rem;
     color: grey;
@@ -657,10 +661,12 @@ h6 {
 }
 
 .fa-instagram {
-    background: #125688;
-    color: white;
-    border: 1px #125688 solid;
-    transition: all .4s ease-in-out;
+     background: #125688; 
+background: radial-gradient(circle at 30% 107%,#fdf497 0%,#fdf497 5%,#fd5949
+45%,#d6249f 60%,#285AEB 90%);
+color: white;
+border: 1px #125688 solid;
+transition: all .4s ease-in-out;
 }
 
 .fa-instagram:hover {
